[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/Sprite_Chest_Closed.tres" type="Texture" id=1]
[ext_resource path="res://World/Sprite_Chest_Opened.tres" type="Texture" id=2]
[ext_resource path="res://UI/PressA.tscn" type="PackedScene" id=3]
[ext_resource path="res://World/Chest.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 8 )

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[node name="Chest" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 4 )

[node name="Closed" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="Opened" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -16 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Proximity" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Proximity"]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="PressX" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -40 )

[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
